FIXED HEADER TITLE(align as top nav)...

--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -13,6 +13,7 @@
 /* Bootstrap */
 @import url(../css/animate.css);
 
+/*--Action--*/
 .dropdown #DetailDropDn{
   width: 15px;
   padding: 0px;
@@ -23,7 +24,15 @@
 .dropdown #DetailDropDn a{
   font-size: 15px;
 }
+/*--End of Action--*/
 
+.header-left{
+    margin-right:20px;
+}
+
+.table-responsive{
+  height: 420px;
+}
 tr{
   cursor: pointer;
 }
